Bug 25415 - segv on empty search path
Summary: segv on empty search path
Status: RESOLVED FIXED
Alias: None
Product: elfutils
Classification: Unclassified
Component: debuginfod (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Frank Ch. Eigler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-18 20:30 UTC by Frank Ch. Eigler
Modified: 2020-01-18 20:41 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2020-01-18 20:30:53 UTC
commit 32ed4e6f8 (unreleased) introduced a bug with runs such as
 % debuginfod -R 
without a path, because fts(3) is not defined to operate with zero path names.
Comment 1 Frank Ch. Eigler 2020-01-18 20:41:35 UTC
commit c02dfd95e3d merged as obvious