PR25415: fix debuginfod SEGV for empty search path list

Prevent triggering undefined behaviour of fts(3), which causes
a SEGV on fedora glibc 2.29.